# SatScheduler-web

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pytest.ini
backend/: pyproject.toml
backend/app/: __init__.py  cache.py  config.py  db.py  executor.py  import_export.py  jobs.py  main.py  planner.py  prediction.py  satnogs.py  schemas.py  service.py  solar.py  targets.py
backend/tests/: test_api.py  test_core.py  test_prediction.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
