[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "satscheduler-web"
version = "0.1.0"
description = "Single-station SatNOGS observation scheduler"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10,<4",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "python-multipart>=0.0.9,<1",
  "satnogs-predict>=0.4,<0.5",
  "skyfield>=1.53,<2",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.9,<1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
